Use `SequencedCollection` methods
GitOrigin-RevId: d3514cf122e5b0523e50066fccba9c4ccb62c0ea